# ml_ops_2

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
backend/src/models/: predict_model.py  preprocess_multisim.py  train_model.py
frontend/: Dockerfile  app.py  pyproject.toml
