[project]
name = "MLOps_frontend_service"
version = "0.1.0"
description = "Example of Streamlit frontend for DataMinds bootcamp"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "Elkhn", email = "elxana@azercell.com" }]
dependencies = [
    "openpyxl>=3.1.5",       
    "pandas>=2.3.1",         
    "numpy>=1.26.0",         
    "streamlit>=1.48.1",     
    "requests>=2.31.0",      
    "matplotlib>=3.9.0",     
    "plotly>=5.22.0",        
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
